Camera Composition Guides do not disappear with Overlays #59337

Closed
opened 2018-12-13 22:36:38 +01:00 by green giant · 3 comments

System Information
Operating system: Windows 10
Graphics card: Gtx 1070

Blender Version
Broken: 2.80 Beta Date: 2018-12-13 14:31

Short description of error
When viewport overlays are disabled (super cool feature, btw) the camera's Composition Guides do not go away

Exact steps for others to reproduce the error

  • Go to camera view: Press zero on the numpad
  • Select camera and enable one of the Composition Guides
  • Toggle Display Overlays to off
  • Note that the composition guides are still displays

Note
This bug report might veer a bit in to subjective territory, but consider the case when multiple Guides are enabled and you want to turn off all overlays so you can see the approximate render in the viewport. You will have to turn off the overlays, select the camera, go to the camera tab, find composition guides (possibly having to scroll), and uncheck all that apply. When you want to flip back you will have to reselect the guides you are interested in. I would argue from a workflow perspective this is unwieldy, and from a semantic standpoint its confusing since it is reasonable to call the Composition Guides an overlay

**System Information** Operating system: Windows 10 Graphics card: Gtx 1070 **Blender Version** Broken: 2.80 Beta Date: 2018-12-13 14:31 **Short description of error** When viewport overlays are disabled (super cool feature, btw) the camera's Composition Guides do not go away **Exact steps for others to reproduce the error** - Go to camera view: Press zero on the numpad - Select camera and enable one of the Composition Guides - Toggle Display Overlays to off - Note that the composition guides are still displays **Note** This bug report might veer a bit in to subjective territory, but consider the case when multiple Guides are enabled and you want to turn off all overlays so you can see the approximate render in the viewport. You will have to turn off the overlays, select the camera, go to the camera tab, find composition guides (possibly having to scroll), and uncheck all that apply. When you want to flip back you will have to reselect the guides you are interested in. I would argue from a workflow perspective this is unwieldy, and from a semantic standpoint its confusing since it is reasonable to call the Composition Guides an overlay
Author

Added subscriber: @greengiant83

Added subscriber: @greengiant83

This issue was referenced by 948256442b

This issue was referenced by 948256442b27a640c5ec87563ef1f12333d32e21

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59337
No description provided.