Fix T59337: Camera visual aids ignore overlay